--- a/javascript/styles.css
+++ b/javascript/styles.css
@@ -109,6 +109,10 @@ body {
   overflow-y: scroll;
   font-size: calc(1.1vw);
   transition: 1s ease-in-out;
+      position: fixed; /* 要素を固定位置に配置 */
+       top: 50%; /* 上端を画面の中央に配置 */
+       left: 50%; /* 左端を画面の中央に配置 */
+       transform: translate(-50%, -50%); /* 要素の中心を画面の中央に移動 */
 }
 
 #notice {
